# ai-platform-swe-1.6-gen

./: .dockerignore  .gitignore  Makefile  PROGRESS.md  README.md  agents.md  docker-compose.test.yml  docker-compose.yml  test_mock_mode.py  test_nats_worker.py  verify_chat_lifecycle.py
apps/web/: .dockerignore  nginx.conf  package.json  proxy.conf.json
apps/web/playwright-report/: index.html
apps/web/src/: main.ts
apps/web/src/assets/: chatkit-client.js
apps/web/test-results/: .last-run.json
apps/web/test-results/ui-first-flow-UI-First-Flo-d7ad4-tkit-endpoint-accessibility-chromium/: error-context.md
apps/web/tests/e2e/: ui-first-flow.spec.ts
docs/: COMPLETE_FLOW.md  README.md  REFACTOR_CHANGES.md  architecture-component-diagram.mmd  architecture-simple-flow.mmd  crewai-expert-flow.mmd  sequence-nats-messaging.mmd
docs/screenshots/: .last-run.json
docs/screenshots/ui-first-flow-UI-First-Flo-785f3-ect-→-see-previous-messages-chromium/: error-context.md
docs/screenshots/ui-first-flow-UI-First-Flo-785f3-ect-→-see-previous-messages-firefox/: error-context.md
docs/screenshots/ui-first-flow-UI-First-Flo-785f3-ect-→-see-previous-messages-webkit/: error-context.md
services/agent-service/: Dockerfile  README.md  docker-compose-dev.yml  mock_worker.py  pyproject.toml
services/agent-service/app/: main.py
services/agent-service/internal/: db.py  models.py
services/agent-service/internal/agent/: router.py
services/agent-service/internal/chatkit/: context.py  event_mapper.py  nats_bridge.py  router.py  server.py  store.py
services/agent-service/internal/handlers/: nats.py
services/agent-service/internal/messaging/: nats.py
services/agent-service/internal/workflow/: event_streams.py  events.py  tracing.py
services/agent-service/migrations/versions/: 004_rename_run_id_to_chat_id.py
services/agent-service/tests/: test_worker_ready_flow.py
services/agent-service/tests/e2e/: conftest.py  test_chat_lifecycle.py  test_chatkit_e2e.py  test_complete_workflow.py
services/agent-service/tests/e2e/fixtures/: __init__.py  mock_agent_runner.py  nats_helper.py
services/agent-service/tests/integration/: chat_lifecycle_test.py  conftest.py  conftest_chatkit.py  event_handling_test.py  nats_publishing_test.py  test_chatkit_components.py
services/agent-service/tests/security/: test_authorization.py
services/agent-worker/: Dockerfile.base-builder  Dockerfile.crewai  Dockerfile.crewai-expert  Dockerfile.single-agent  Dockerfile.specialist  Dockerfile.worker  Makefile  README.md  docker-compose-dev.yml  pyproject.toml
services/agent-worker/app/: worker.py
services/agent-worker/internal/: config.py  db.py  models.py
services/agent-worker/internal/agents/: code_guidelines.py  factory.py  implementers.py  model_factory.py  schemas.py  specialists.py  validators.py
services/agent-worker/internal/agents/crewai-expert/src/crewai_expert/: __init__.py  approvals.py  config.py  dependency_tools.py  graph.py  main.py  models.py  nodes.py  patch_tools.py  project_tools.py  state.py  worker.py
services/agent-worker/internal/agents/crewai-expert/tests/unit/: test_expert_graph.py  test_runner_extensions.py
services/agent-worker/internal/agents/crewai/src/agent_worker/: bootstrap.py  events.py  main.py  nats_client.py  runner.py  subjects.py  worker.py
services/agent-worker/internal/agents/crewai/tests/integration/: test_crewai_worker_flow.py
services/agent-worker/internal/agents/crewai/tests/unit/: test_crewai_worker_bootstrap.py
services/agent-worker/internal/agents/patch/: final_patch_crewai.py  new_funcs.py  patch_crewai.py  patch_crewai_generic.py  test_imports.py
services/agent-worker/internal/agents/single_agent/: agent.py  graph.py  nodes.py
services/agent-worker/internal/agents/specialist/: implementers.py  validators.py
services/agent-worker/internal/handlers/: nats.py
services/agent-worker/internal/messaging/: nats.py  nats_streams.py
services/agent-worker/internal/skills/: registry.py  snapshots.py
services/agent-worker/internal/tools/: repository.py  workspace.py
services/agent-worker/internal/workflow/: approvals.py  checkpointer.py  events.py  graph.py  nodes.py  router.py  state.py  tracing.py
services/agent-worker/internal/workspace/: manager.py
services/agent-worker/scripts/: container-start.sh
services/agent-worker/tests/integration/: command_handling_test.py  conftest.py  helpers.py  nats_subscription_test.py  test_crewai.py  test_crewai_expert_flow.py  test_single_agent.py  test_specialist.py  test_specialist_workflow.py  workflow_execution_test.py
services/agent-worker/tests/security/: test_prompt_injection.py  test_secret_redaction.py
services/control-plane/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
services/control-plane/cmd/server/: main.go
services/control-plane/internal/config/: config.go
services/control-plane/internal/handlers/: chat_container.go  nats.go  project.go
services/control-plane/internal/models/: user.go
services/control-plane/internal/nats/: subjects.go
services/control-plane/internal/orchestrator/: docker_bind.go  docker_bind_test.go  docker_http.go  factory.go  kubernetes.go  kubernetes_test.go  manager.go  manager_test.go  suite_test.go
services/control-plane/internal/repository/: chat_container.go  organization.go
services/control-plane/internal/service/: chat_container.go  project.go
services/control-plane/migrations/: 000002_add_chat_containers.up.sql
services/control-plane/tests/integration/: conftest.go  container_lifecycle_test.go  nats_cleanup_test.go  nats_subscription_test.go  (+2 more)
shared/: pyproject.toml
shared/agent-core/: pyproject.toml
shared/agent-core/agent_core/: __init__.py  config.py  db.py  models.py
shared/agent-core/agent_core/messaging/: nats.py
shared/agentic_shared/: __init__.py  nats_streams.py  nats_subjects.py
shared/agentic_shared/test-tools/: message_fixtures.py  nats_helpers.py
shared/test-tools/: __init__.py  conftest.py  message_fixtures.py  nats_helpers.py  postgres_helpers.py  pyproject.toml
(+9 files in other folders)
