[project]
name = "agentic-shared"
version = "0.1.0"
description = "Shared utilities for agentic platform"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_shared"]

[tool.ruff]
line-length = 100
target-version = "py312"
