[project]
name = "agent-service"
version = "0.1.0"
description = "Agent service with ChatKit and LangGraph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg-binary>=3.2.0",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai-chatkit>=0.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "langsmith>=0.1.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "jsonschema>=4.0.0",
    "docker>=7.0.0",
    "nats-py>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-describe>=2.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dev-env = "docker-compose -f docker-compose-dev.yml up -d"
dev-env-down = "docker-compose -f docker-compose-dev.yml down"
test-integration = "pytest tests/integration/ -v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "internal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
