[project]
name = "agent-worker"
version = "0.1.0"
description = "Agent worker for isolated workflow execution"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.7",
    "langchain-openai>=0.2.10",
    "langchain-anthropic>=0.2.3",
    "langchain-ollama>=0.2.1",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-postgres>=2.0.9",
    "psycopg-binary>=3.2.3",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "httpx>=0.28.1",
    "PyYAML>=6.0.2",
    "jsonschema>=4.23.0",
    "docker>=7.1.0",
    "nats-py>=2.9.0",
    "fastapi>=0.115.6",
    "sse-starlette>=2.1.3",
    "langsmith>=0.1.20",
    "playwright>=1.48.0",
    "aiohttp>=3.11.7",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "internal", "internal/agents/crewai/src/agent_worker", "internal/agents/specialist/src/specialist_worker", "internal/agents/single-agent/src/single_agent_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
pythonpath = ["internal/agents/crewai/src", "internal/agents/specialist/src", "internal/agents/single-agent/src"]
