[project]
name = "agent-worker"
version = "0.1.0"
description = "Agent worker for isolated workflow execution"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=0.3.5",
    "langchain-anthropic>=0.4.8",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-binary>=3.2.6",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.1",
    "PyYAML>=6.0.3",
    "jsonschema>=4.26.0",
    "docker>=7.2.0",
    "nats-py>=2.15.0",
    "fastapi>=0.139.0",
    "sse-starlette>=3.4.5",
    "langsmith>=0.10.2",
    "playwright>=1.61.0",
    "aiohttp>=3.14.1",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
crewai-expert = [
    "packaging>=24.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "internal",
    "internal/agents/crewai/src/agent_worker",
    "internal/agents/specialist/src/specialist_worker",
    "internal/agents/single-agent/src/single_agent_worker",
    "internal/agents/crewai-expert/src/crewai_expert",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
pythonpath = ["internal/agents/crewai/src", "internal/agents/specialist/src", "internal/agents/single-agent/src", "internal/agents/crewai-expert/src", "internal/agents/patch"]
