[project]
name = "agent-core"
version = "0.1.0"
description = "Shared core modules (config, db, models, messaging) for the agent-service and agent-worker"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "nats-py>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]

[tool.ruff]
line-length = 100
target-version = "py312"
